# novellossless

./: .gitignore  AGENTS.md  Cargo.toml  README.md  novellossless_PRD.md
.github/workflows/: release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  tauri.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  watcher.rs
apps/desktop/src/components/: InspectorPanel.tsx  StatusButtons.tsx
apps/desktop/src/lib/: helpers.tsx
apps/desktop/src/routes/: Characters.tsx  ContentView.tsx  ContextPack.tsx  Dashboard.tsx  Foreshadows.tsx  Issues.tsx  Privacy.tsx  ProfileDetail.tsx  RepeatedDescriptions.tsx  RevisionHistory.tsx  SearchView.tsx  Settings.tsx  Timeline.tsx
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  provider.rs
crates/core/: Cargo.toml
crates/core/src/: keychain.rs  lib.rs  profile.rs  scan.rs
crates/core/src/analysis/: conflicts.rs  extractor.rs  foreshadow.rs  item.rs  mod.rs  person.rs  place.rs
crates/impact/: Cargo.toml
crates/impact/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/profiles/: Cargo.toml
crates/profiles/src/: checks.rs  knowledge.rs  lib.rs  loader.rs  manifest.rs  metrics.rs  rule_engine.rs
crates/repeated/: Cargo.toml
crates/repeated/src/: lib.rs  types.rs
crates/repeated/src/detectors/: dialogue_patterns.rs  high_freq_expressions.rs  mod.rs  psych_density.rs  repeated_actions.rs  similar_paragraphs.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: lib.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: lib.rs
docs/: architecture.md  roadmap.md
docs/superpowers/plans/: 2026-07-06-alpha1-incremental-scan-and-revision-history.md  2026-07-06-alpha1-memory-card-deepen.md  2026-07-08-beta2-profile-packs.md  2026-07-09-beta3-core-upgrades.md  2026-07-09-repeated-description-detection.md
docs/superpowers/specs/: 2026-07-06-alpha1-incremental-scan-and-revision-history-design.md  2026-07-06-alpha1-memory-card-deepen-design.md  2026-07-08-beta2-profile-packs-design.md  2026-07-09-beta3-core-upgrades-design.md  2026-07-09-repeated-description-detection.md
profiles/common_longform/: metrics.toml  profile.toml  rules.toml
profiles/demo/: 001-桃园结义.txt  001-雨夜.txt  002-曹操献刀.txt  002-档案室.txt  003-温酒斩华雄.txt  003-钟楼.txt  004-三顾茅庐.txt  004-老宅.txt  005-真相.txt  005-草船借箭.txt
profiles/history/: metrics.toml  profile.toml  rules.toml
profiles/history/knowledge/: ming_officials.toml  song_officials.toml  tang_officials.toml  tang_places.toml
profiles/shuangwen/: metrics.toml  profile.toml  rules.toml
