[workspace]
members = [
    "apps/cli",
    "apps/desktop/src-tauri",
    "crates/core",
    "crates/parser",
    "crates/profiles",
    "crates/storage",
    "crates/tasks",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gordonlu/novellossless"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap = { version = "4.5.40", features = ["derive"] }
deeplossless = "=0.7.4"
encoding_rs = "0.8.35"
regex = "1.11.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.8"
sha2 = "0.10.9"
tauri = "2.11.5"
tauri-build = "2.5.1"
tauri-plugin-dialog = "2.4.1"
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"] }
novellossless-profiles = { path = "crates/profiles" }
walkdir = "2.5.0"
