[package]
name = "novellossless-ai"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deeplossless = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
deeplossless-compat = ["dep:deeplossless"]
