[package]
name = "novellossless-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deeplossless = { workspace = true, optional = true }
novellossless-parser = { path = "../parser" }
novellossless-storage = { path = "../storage" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true }
sha2.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
deeplossless-compat = ["dep:deeplossless"]
