[package]
name = "novellossless-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deeplossless = { workspace = true, optional = true }
novellossless-parser = { path = "../parser" }
novellossless-profiles = { path = "../profiles" }
novellossless-storage = { path = "../storage" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true }
sha2.workspace = true
walkdir.workspace = true
novellossless-rules = { path = "../rules" }
novellossless-timeline = { path = "../timeline" }
novellossless-tasks = { path = "../tasks" }
novellossless-impact = { path = "../impact" }
novellossless-ai = { path = "../ai" }
novellossless-repeated = { path = "../repeated" }
keyring = { version = "4.1.4", default-features = false, features = ["v1", "apple-native-keyring-store", "windows-native-keyring-store", "zbus-secret-service-keyring-store"] }
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
deeplossless-compat = ["dep:deeplossless"]
