[package]
name = "novellossless-impact"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
novellossless-storage = { path = "../storage" }
serde_json.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
