[package]
name = "novellossless-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "novellossless_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
novellossless-core = { path = "../../../crates/core" }
novellossless-storage = { path = "../../../crates/storage" }
notify = "8"
serde.workspace = true
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-dialog.workspace = true
